<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.LoginActivity">
    <EditText
        android:id="@+id/phone_number_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number_login"
        android:background="@drawable/phone_number_login"
        android:padding="15dp"
        android:layout_margin="25dp"
        android:inputType="phone"/>
    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_login"
        android:background="@drawable/password_login"
        android:padding="15dp"
        android:layout_margin="25dp"
        android:inputType="textWebPassword"/>
    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <CheckBox
            android:id="@+id/checkbox_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_box_login"
            android:gravity="center_vertical"
            android:layout_marginStart="30sp"
            android:textSize="15sp"
            android:textStyle="bold"/>

    </LinearLayout>
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/login_login"
        android:layout_marginTop="35dp"
        android:text="@string/login_button"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/sign_up_now_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_login"
        android:textSize="16sp"
        android:layout_marginTop="18dp"/>
    <TextView
        android:id="@+id/or_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/login_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_as_admin"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000"/>
</LinearLayout>