<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.WelcomeActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/pic_of_mr_alaa_refaat"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="35dp"
        android:src="@drawable/mr_alaa_refaat"
        android:background="@drawable/circle_mr_welcome"/>
    <TextView
        android:id="@+id/the_main_app_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_main_app"
        app:layout_constraintTop_toBottomOf="@id/pic_of_mr_alaa_refaat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="35dp"
        android:textSize="25sp"
        android:textColor="#000"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/the_main_square_app_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_main_square_app"
        app:layout_constraintTop_toBottomOf="@id/the_main_app_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp"
        android:textSize="25sp"
        android:textColor="#000"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/join_now_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/the_main_square_app_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/register_now_welcome"
        android:text="@string/join_now_welcome"
        android:textStyle="bold"
        android:textColor="#000"/>
    <Button
        android:id="@+id/login_welcome_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/join_now_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:background="@drawable/login_welcome"
        android:text="@string/Login_welcome"
        android:textStyle="bold"
        android:textColor="#000"/>
</androidx.constraintlayout.widget.ConstraintLayout>